<resources>
    <string name="app_name">Smart Book</string>
    <string name="title_activity_register">register</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="communicate">Communicate</string>
    <string name="home">Home</string>
    <string name="lyrics_home">Lyrics Home</string>
    <string name="add_lyrics">Add Lyrics</string>
    <string name="account_settings">Account Settings</string>
    <string name="connection_settings">Connection Settings</string>
    <string name="help">Help</string>
    <string name="contact_us">Contact Us</string>
    <string name="feedback">Feedback</string>
    <string name="title_activity_add_lyrics">AddLyricsActivity</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="title_activity_add__lyrics_">Add_Lyrics_Activity</string>
    <string name="share">Share</string>
    <string name="title_activity_lyrics_home">LyricsHomeActivity</string>
    <string name="title_activity_connection">ConnectionActivity</string>
</resources>
